# complements_analyse_images

TP1/: CMakeLists.txt  Morpho.tcl  ReadMe.txt  intiwish  tp1.py
TP1/LIBTCL/: propag_bin.tcl  tclIndex  tps.tcl  util.tcl
TP1/include/: Image.hh  morfo.hh  tpmorpho1.hh  tpmorpho2.hh
TP1/src/: Image.cc  init.cc  morfo.cc  photo.cc  tpmorpho1.cc  tpmorpho2.cc
TP2/: tp2.py
